# jcjurado

./: README.md  dependencias.md
Exercises/: Agente_IA_Debate.ipynb
ML/: README.md
ProjectCV/: Agente_IA_Chat_Evaluador.ipynb  Chat_IA.ipynb  Exercises2.ipynb  README.md  app.py
ProjectCV/me/: summary.txt
ProjectFIN/: README.md  pyproject.toml
ProjectFIN/memory/: chroma.sqlite3  long_term_memory_storage.db
ProjectFIN/output/: decision.md  research_report.json  trending_companies.json
ProjectFIN/src/stock_pricerque/: crew.py  main.py
ProjectFIN/src/stock_pricerque/config/: agents.yaml  tasks.yaml
ProjectFIN/src/stock_pricerque/tools/: push_tool.py
ProyectoMKT/: README:md
