[project]
name = "stock_pricerque"
version = "0.1.0"
description = "stock_pricerque using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.6.0"
]

[project.scripts]
stock_pricerque = "stock_pricerque.main:run"
run_crew = "stock_pricerque.main:run"
train = "stock_pricerque.main:train"
replay = "stock_pricerque.main:replay"
test = "stock_pricerque.main:test"
run_with_trigger = "stock_pricerque.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
